# underactuated_hand_ros

./: README.md  nasaHandPots.h  nasa_hand_pots.ino
hand_arduino/: CMakeLists.txt  package.xml  setup.py
hand_arduino/launch/: hand.launch
hand_arduino/msg/: grasp.msg  pos_ctrl_1.msg  underactuatedHandSensors.msg
hand_arduino/scripts/: hand_console_setup.py  hand_teleop.py
hand_description/: CMakeLists.txt  package.xml
hand_description/meshes/: finger1_dist_link.STL  finger1_prox_link.STL  finger2_dist_link.STL
hand_description/meshes/collision/: base_link_palm.STL  finger1_dist_link.STL  finger1_prox_link.STL  finger2_dist_link.STL  finger2_prox_link.STL  thumb_dist_link.STL  thumb_prox_link.STL
hand_description/meshes/visual/: finger1_dist_link.STL  finger1_prox_link.STL  finger2_dist_link.STL  thumb_dist_link.STL
hand_description/urdf/: nasa_hand.csv  nasa_hand.xacro  nasa_hand_macro.xacro  nasa_hand_transmission_macro.xacro  underactuated_hand_urdf.csv  underactuated_hand_urdf.urdf
hand_gazebo/: CMakeLists.txt  package.xml
hand_gazebo/launch/: gazebo.launch
hand_rviz/: CMakeLists.txt  package.xml
hand_rviz/config/: pot_mins.cfg  pot_ranges.yaml
hand_rviz/launch/: display.launch  teleop_sim.launch
hand_rviz/rviz/: teleop_ft_config.rviz  urdf_config.rviz
hand_rviz/scripts/: server.py  underactuated_hand_sim.py
nasa_hand_msgs/: CMakeLists.txt  package.xml
nasa_hand_msgs/cfg/: pot_mins.cfg
nasa_hand_msgs/config/: nasa_hand_config.yaml
nasa_hand_msgs/nodes/: server.py
nasa_hand_msgs/scripts/: nasa_hand_script_param.py
nasa_hand_urdf/: CMakeLists.txt  package.xml
nasa_hand_urdf/config/: joint_names_nasa_hand_urdf.yaml
nasa_hand_urdf/launch/: display.launch  gazebo.launch
nasa_hand_urdf/meshes/: thumb_dist_link.STL
nasa_hand_urdf/urdf/: nasa_hand_urdf.urdf
rosserial/: test.txt
this is a test/: test.txt
(+15 files in other folders)
